--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 05:05:07 2018</p>
+         Last Run: Sat Nov  3 06:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>2</td>
+                        <td>0</td>
                         <td>81</td>
                         <td>0</td>
                         <td>8</td>
@@ -45,7 +45,7 @@
                         <td>Mostly Cloudy</td>
                         <td>4</td>
                         <td>2</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>68</td>
                         <td>1</td>
                         <td>10</td>
@@ -57,7 +57,7 @@
                         <td>Partly Cloudy</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>61</td>
                         <td>1</td>
                         <td>10</td>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
-                 "2"
+                 "0",
+                 "1",
+                 "1"
                ]
              },
              {
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 05:05:07 2018</p>
+         Last Run: Sat Nov  3 06:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -254,19 +254,19 @@
                         <td>1</td>
                         <td>14</td>
                         <td>NW</td>
-                        <td>89</td>
+                        <td>88</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>39</td>
+                        <td>38</td>
                         <td>49</td>
                         <td>1</td>
                         <td>14</td>
                         <td>NW</td>
-                        <td>76</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -274,11 +274,11 @@
                         <td>9</td>
                         <td>9</td>
                         <td>7</td>
-                        <td>46</td>
+                        <td>47</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>69</td>
+                        <td>70</td>
                      </tr>
                   </tbody>
                </table>
@@ -377,7 +377,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "47",
-                 "39",
+                 "38",
                  "7"
                ]
              },
@@ -389,7 +389,7 @@
                "data":[
                  "54",
                  "49",
-                 "46"
+                 "47"
                ]
              },
              {
@@ -398,9 +398,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "89",
-                 "76",
-                 "69"
+                 "88",
+                 "77",
+                 "70"
                ]
              }
            ]
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 05:05:07 2018</p>
+         Last Run: Sat Nov  3 06:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -469,14 +469,14 @@
                         <td>0</td>
                         <td>8</td>
                         <td>ENE</td>
-                        <td>94</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>20</td>
+                        <td>19</td>
                         <td>74</td>
                         <td>0</td>
                         <td>8</td>
@@ -488,11 +488,11 @@
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-8</td>
-                        <td>20</td>
-                        <td>75</td>
+                        <td>19</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>E</td>
+                        <td>ENE</td>
                         <td>94</td>
                      </tr>
                   </tbody>
@@ -592,8 +592,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "21",
-                 "20",
-                 "20"
+                 "19",
+                 "19"
                ]
              },
              {
@@ -604,7 +604,7 @@
                "data":[
                  "74",
                  "74",
-                 "75"
+                 "74"
                ]
              },
              {
@@ -613,7 +613,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "94",
+                 "93",
                  "94",
                  "94"
                ]
@@ -655,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 05:05:07 2018</p>
+         Last Run: Sat Nov  3 06:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -691,7 +691,7 @@
                         <td>Clear</td>
                         <td>-11</td>
                         <td>-16</td>
-                        <td>3</td>
+                        <td>4</td>
                         <td>62</td>
                         <td>0</td>
                         <td>8</td>
@@ -704,7 +704,7 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>3</td>
-                        <td>64</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -807,7 +807,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "4",
-                 "3",
+                 "4",
                  "3"
                ]
              },
@@ -819,7 +819,7 @@
                "data":[
                  "63",
                  "62",
-                 "64"
+                 "65"
                ]
              },
              {
