--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 06:05:02 2018</p>
+         Last Run: Sat Nov  3 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -31,12 +31,12 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Mostly Cloudy</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>2</td>
+                        <td>-1</td>
                         <td>0</td>
                         <td>81</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WSW</td>
                         <td>75</td>
                      </tr>
@@ -45,7 +45,7 @@
                         <td>Mostly Cloudy</td>
                         <td>4</td>
                         <td>2</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>68</td>
                         <td>1</td>
                         <td>10</td>
@@ -57,10 +57,10 @@
                         <td>Partly Cloudy</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>61</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>WSW</td>
                         <td>59</td>
                      </tr>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "2",
                  "4"
                ]
@@ -101,7 +101,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "2",
                  "4",
                  "6"
                ]
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "1",
-                 "1"
+                 "0",
+                 "0"
                ]
              },
              {
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 06:05:02 2018</p>
+         Last Run: Sat Nov  3 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -246,39 +246,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Overcast</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>47</td>
+                        <td>24</td>
                         <td>54</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>NW</td>
                         <td>88</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Mostly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>38</td>
-                        <td>49</td>
+                        <td>19</td>
+                        <td>50</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>NW</td>
-                        <td>77</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>7</td>
+                        <td>24</td>
                         <td>47</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NW</td>
-                        <td>70</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,9 +376,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "47",
-                 "38",
-                 "7"
+                 "24",
+                 "19",
+                 "24"
                ]
              },
              {
@@ -388,7 +388,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "54",
-                 "49",
+                 "50",
                  "47"
                ]
              },
@@ -399,8 +399,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "88",
-                 "77",
-                 "70"
+                 "75",
+                 "69"
                ]
              }
            ]
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 06:05:02 2018</p>
+         Last Run: Sat Nov  3 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,36 +464,36 @@
                         <td>Overcast</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>21</td>
-                        <td>74</td>
+                        <td>8</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ENE</td>
-                        <td>93</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>19</td>
-                        <td>74</td>
+                        <td>9</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ENE</td>
-                        <td>94</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-8</td>
-                        <td>19</td>
-                        <td>74</td>
+                        <td>9</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>ENE</td>
-                        <td>94</td>
+                        <td>E</td>
+                        <td>89</td>
                      </tr>
                   </tbody>
                </table>
@@ -591,9 +591,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "21",
-                 "19",
-                 "19"
+                 "8",
+                 "9",
+                 "9"
                ]
              },
              {
@@ -602,9 +602,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "74",
-                 "74",
-                 "74"
+                 "75",
+                 "75",
+                 "76"
                ]
              },
              {
@@ -613,9 +613,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "93",
-                 "94",
-                 "94"
+                 "92",
+                 "91",
+                 "89"
                ]
              }
            ]
@@ -655,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 06:05:02 2018</p>
+         Last Run: Sat Nov  3 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -680,11 +680,11 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>4</td>
-                        <td>63</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>WSW</td>
-                        <td>4</td>
+                        <td>SW</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -692,23 +692,23 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>4</td>
-                        <td>62</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>4</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-11</td>
                         <td>-16</td>
-                        <td>3</td>
-                        <td>65</td>
+                        <td>4</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>4</td>
+                        <td>3</td>
                      </tr>
                   </tbody>
                </table>
@@ -808,7 +808,7 @@
                "data":[
                  "4",
                  "4",
-                 "3"
+                 "4"
                ]
              },
              {
@@ -817,9 +817,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "63",
-                 "62",
-                 "65"
+                 "68",
+                 "69",
+                 "70"
                ]
              },
              {
@@ -828,9 +828,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "4",
-                 "4",
-                 "4"
+                 "3",
+                 "3",
+                 "3"
                ]
              }
            ]
