--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 08:05:03 2018</p>
+         Last Run: Sat Nov  3 09:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -31,26 +31,26 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Mostly Cloudy</td>
-                        <td>2</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>0</td>
-                        <td>0</td>
-                        <td>81</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>79</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>68</td>
+                        <td>72</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>70</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>6</td>
                         <td>4</td>
                         <td>0</td>
-                        <td>60</td>
+                        <td>63</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "0",
+                 "-2",
                  "2",
                  "4"
                ]
@@ -101,8 +101,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "2",
-                 "5",
+                 "1",
+                 "4",
                  "6"
                ]
              }
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "68",
-                 "60"
+                 "88",
+                 "72",
+                 "63"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "79",
-                 "70",
+                 "73",
+                 "65",
                  "59"
                ]
              }
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 08:05:03 2018</p>
+         Last Run: Sat Nov  3 09:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -250,23 +250,23 @@
                         <td>8</td>
                         <td>6</td>
                         <td>24</td>
-                        <td>54</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>88</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>8</td>
                         <td>6</td>
                         <td>19</td>
-                        <td>50</td>
+                        <td>54</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NW</td>
-                        <td>76</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -274,11 +274,11 @@
                         <td>9</td>
                         <td>9</td>
                         <td>24</td>
-                        <td>47</td>
+                        <td>48</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NW</td>
-                        <td>69</td>
+                        <td>71</td>
                      </tr>
                   </tbody>
                </table>
@@ -387,9 +387,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "57",
                  "54",
-                 "50",
-                 "47"
+                 "48"
                ]
              },
              {
@@ -398,9 +398,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "88",
-                 "76",
-                 "69"
+                 "89",
+                 "85",
+                 "71"
                ]
              }
            ]
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 08:05:03 2018</p>
+         Last Run: Sat Nov  3 09:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -462,10 +462,10 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Overcast</td>
-                        <td>-4</td>
-                        <td>-7</td>
+                        <td>-5</td>
+                        <td>-9</td>
                         <td>7</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ENE</td>
@@ -477,11 +477,11 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>7</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>ENE</td>
-                        <td>90</td>
+                        <td>E</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -520,7 +520,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-7",
+                 "-9",
                  "-9",
                  "-8"
                ]
@@ -532,7 +532,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-4",
+                 "-5",
                  "-5",
                  "-5"
                ]
@@ -602,8 +602,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "74",
-                 "74",
+                 "75",
+                 "75",
                  "76"
                ]
              },
@@ -614,7 +614,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "92",
-                 "90",
+                 "91",
                  "89"
                ]
              }
@@ -655,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 08:05:03 2018</p>
+         Last Run: Sat Nov  3 09:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
