--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 09:05:03 2018</p>
+         Last Run: Sat Nov  3 10:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -29,40 +29,28 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>10:00 AM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>11:00 AM</td>
+                        <td>Partly Cloudy</td>
+                        <td>3</td>
                         <td>1</td>
-                        <td>-2</td>
                         <td>0</td>
-                        <td>88</td>
-                        <td>0</td>
+                        <td>79</td>
+                        <td>1</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>73</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 AM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>4</td>
-                        <td>2</td>
-                        <td>0</td>
-                        <td>72</td>
-                        <td>1</td>
-                        <td>10</td>
-                        <td>WSW</td>
-                        <td>65</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>6</td>
-                        <td>4</td>
+                        <td>5</td>
+                        <td>3</td>
                         <td>0</td>
-                        <td>63</td>
+                        <td>66</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SW</td>
-                        <td>59</td>
+                        <td>56</td>
                      </tr>
                   </tbody>
                </table>
@@ -77,7 +65,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "10:00 AM",
              "11:00 AM",
              "12:00 PM"
            ],
@@ -89,9 +76,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
-                 "2",
-                 "4"
+                 "1",
+                 "3"
                ]
              },
              {
@@ -101,9 +87,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
-                 "4",
-                 "6"
+                 "3",
+                 "5"
                ]
              }
            ]
@@ -149,7 +134,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "10:00 AM",
              "11:00 AM",
              "12:00 PM"
            ],
@@ -161,7 +145,6 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
                  "0"
                ]
              },
@@ -171,9 +154,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "88",
-                 "72",
-                 "63"
+                 "79",
+                 "66"
                ]
              },
              {
@@ -182,9 +164,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "73",
-                 "65",
-                 "59"
+                 "59",
+                 "56"
                ]
              }
            ]
@@ -225,7 +206,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 09:05:03 2018</p>
+         Last Run: Sat Nov  3 10:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -249,24 +230,24 @@
                         <td>Overcast</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>24</td>
-                        <td>57</td>
+                        <td>22</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>89</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
                         <td>19</td>
-                        <td>54</td>
+                        <td>49</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>14</td>
                         <td>NW</td>
-                        <td>85</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -276,8 +257,8 @@
                         <td>24</td>
                         <td>48</td>
                         <td>1</td>
-                        <td>11</td>
-                        <td>NW</td>
+                        <td>13</td>
+                        <td>NNW</td>
                         <td>71</td>
                      </tr>
                   </tbody>
@@ -376,7 +357,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
+                 "22",
                  "19",
                  "24"
                ]
@@ -387,8 +368,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
-                 "54",
+                 "53",
+                 "49",
                  "48"
                ]
              },
@@ -398,8 +379,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "89",
-                 "85",
+                 "94",
+                 "74",
                  "71"
                ]
              }
@@ -440,7 +421,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 09:05:03 2018</p>
+         Last Run: Sat Nov  3 10:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,36 +445,36 @@
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>7</td>
-                        <td>75</td>
+                        <td>6</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ENE</td>
-                        <td>92</td>
+                        <td>90</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>7</td>
-                        <td>75</td>
+                        <td>6</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>E</td>
-                        <td>91</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-8</td>
-                        <td>6</td>
-                        <td>76</td>
+                        <td>5</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>6</td>
                         <td>E</td>
-                        <td>89</td>
+                        <td>87</td>
                      </tr>
                   </tbody>
                </table>
@@ -591,9 +572,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
-                 "7",
-                 "6"
+                 "6",
+                 "6",
+                 "5"
                ]
              },
              {
@@ -602,9 +583,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "75",
-                 "75",
-                 "76"
+                 "73",
+                 "73",
+                 "74"
                ]
              },
              {
@@ -613,9 +594,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "92",
-                 "91",
-                 "89"
+                 "90",
+                 "89",
+                 "87"
                ]
              }
            ]
@@ -655,7 +636,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 09:05:03 2018</p>
+         Last Run: Sat Nov  3 10:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -680,7 +661,7 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>4</td>
-                        <td>72</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
@@ -817,7 +798,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
+                 "71",
                  "72",
                  "74"
                ]
