--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 14:05:03 2018</p>
+         Last Run: Sat Nov  3 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Overcast</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>24</td>
-                        <td>52</td>
-                        <td>1</td>
                         <td>13</td>
-                        <td>NW</td>
-                        <td>94</td>
-                     </tr>
-                     <tr>
-                        <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>8</td>
-                        <td>6</td>
-                        <td>20</td>
-                        <td>48</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>14</td>
                         <td>NW</td>
-                        <td>73</td>
+                        <td>96</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Overcast</td>
+                        <td>9</td>
+                        <td>9</td>
+                        <td>11</td>
+                        <td>51</td>
+                        <td>1</td>
+                        <td>13</td>
+                        <td>NW</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>8</td>
-                        <td>48</td>
+                        <td>13</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>70</td>
+                        <td>78</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "6",
-                 "6",
+                 "9",
                  "9"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "8",
-                 "8",
+                 "9",
                  "9"
                ]
              }
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "20",
-                 "8"
+                 "13",
+                 "11",
+                 "13"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "52",
-                 "48",
-                 "48"
+                 "53",
+                 "51",
+                 "50"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "94",
-                 "73",
-                 "70"
+                 "96",
+                 "84",
+                 "78"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 14:05:03 2018</p>
+         Last Run: Sat Nov  3 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -247,8 +247,20 @@
                         <td>09:00 PM</td>
                         <td>Overcast</td>
                         <td>-5</td>
-                        <td>-8</td>
+                        <td>-9</td>
+                        <td>21</td>
+                        <td>71</td>
+                        <td>0</td>
                         <td>8</td>
+                        <td>ENE</td>
+                        <td>92</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Overcast</td>
+                        <td>-5</td>
+                        <td>-8</td>
+                        <td>12</td>
                         <td>72</td>
                         <td>0</td>
                         <td>6</td>
@@ -256,24 +268,12 @@
                         <td>91</td>
                      </tr>
                      <tr>
-                        <td>10:00 PM</td>
-                        <td>Overcast</td>
-                        <td>-5</td>
-                        <td>-8</td>
-                        <td>5</td>
-                        <td>73</td>
-                        <td>0</td>
-                        <td>6</td>
-                        <td>E</td>
-                        <td>92</td>
-                     </tr>
-                     <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-9</td>
-                        <td>4</td>
-                        <td>74</td>
+                        <td>5</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>6</td>
                         <td>E</td>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-8",
+                 "-9",
                  "-8",
                  "-9"
                ]
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "8",
-                 "5",
-                 "4"
+                 "21",
+                 "12",
+                 "5"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "71",
                  "72",
-                 "73",
-                 "74"
+                 "73"
                ]
              },
              {
@@ -397,8 +397,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "91",
                  "92",
+                 "91",
                  "90"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 14:05:03 2018</p>
+         Last Run: Sat Nov  3 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,8 +463,8 @@
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
-                        <td>4</td>
-                        <td>66</td>
+                        <td>3</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -476,7 +476,7 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>4</td>
-                        <td>68</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -485,10 +485,10 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-11</td>
-                        <td>-16</td>
+                        <td>-10</td>
+                        <td>-14</td>
                         <td>4</td>
-                        <td>70</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -521,7 +521,7 @@
                "data":[
                  "-14",
                  "-14",
-                 "-16"
+                 "-14"
                ]
              },
              {
@@ -533,7 +533,7 @@
                "data":[
                  "-10",
                  "-10",
-                 "-11"
+                 "-10"
                ]
              }
            ]
@@ -590,7 +590,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
+                 "3",
                  "4",
                  "4"
                ]
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "65",
                  "66",
-                 "68",
-                 "70"
+                 "68"
                ]
              },
              {
