--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 21:05:02 2018</p>
+         Last Run: Sun Nov  4 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>18</td>
-                        <td>65</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNE</td>
@@ -43,14 +43,14 @@
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
-                        <td>-6</td>
-                        <td>-10</td>
+                        <td>-5</td>
+                        <td>-9</td>
                         <td>10</td>
-                        <td>66</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
-                        <td>96</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>-6</td>
                         <td>-10</td>
                         <td>5</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>91</td>
+                        <td>94</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-9",
-                 "-10",
+                 "-9",
                  "-10"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-5",
-                 "-6",
+                 "-5",
                  "-6"
                ]
              }
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
-                 "66",
-                 "69"
+                 "68",
+                 "68",
+                 "70"
                ]
              },
              {
@@ -183,8 +183,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "97",
-                 "96",
-                 "91"
+                 "97",
+                 "94"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 21:05:02 2018</p>
+         Last Run: Sun Nov  4 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -261,7 +261,7 @@
                         <td>-8</td>
                         <td>-11</td>
                         <td>3</td>
-                        <td>64</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
@@ -273,10 +273,10 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>31</td>
                      </tr>
                   </tbody>
@@ -387,8 +387,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "65",
-                 "64",
-                 "65"
+                 "65",
+                 "66"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 21:05:02 2018</p>
+         Last Run: Sun Nov  4 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 21:05:02 2018</p>
+         Last Run: Sun Nov  4 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 11, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -677,20 +677,20 @@
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>2</td>
-                        <td>0</td>
-                        <td>9</td>
-                        <td>50</td>
+                        <td>-1</td>
+                        <td>10</td>
+                        <td>49</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WNW</td>
-                        <td>78</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>9</td>
+                        <td>10</td>
                         <td>51</td>
                         <td>1</td>
                         <td>8</td>
@@ -707,7 +707,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>84</td>
+                        <td>85</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,7 +734,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "0",
+                 "-1",
                  "0",
                  "1"
                ]
@@ -805,8 +805,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "9",
-                 "9",
+                 "10",
+                 "10",
                  "10"
                ]
              },
@@ -816,7 +816,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
+                 "49",
                  "51",
                  "49"
                ]
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "78",
+                 "79",
                  "82",
-                 "84"
+                 "85"
                ]
              }
            ]
