--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 00:05:02 2018</p>
+         Last Run: Mon Nov  5 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -31,13 +31,13 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Overcast</td>
-                        <td>-5</td>
-                        <td>-9</td>
+                        <td>-6</td>
+                        <td>-10</td>
                         <td>20</td>
-                        <td>68</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>NE</td>
+                        <td>NNE</td>
                         <td>97</td>
                      </tr>
                      <tr>
@@ -46,7 +46,7 @@
                         <td>-6</td>
                         <td>-10</td>
                         <td>18</td>
-                        <td>70</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
@@ -57,8 +57,8 @@
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>12</td>
-                        <td>71</td>
+                        <td>11</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-9",
+                 "-10",
                  "-10",
                  "-10"
                ]
@@ -101,7 +101,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-5",
+                 "-6",
                  "-6",
                  "-6"
                ]
@@ -162,7 +162,7 @@
                "data":[
                  "20",
                  "18",
-                 "12"
+                 "11"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
                  "70",
-                 "71"
+                 "72",
+                 "73"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 00:05:02 2018</p>
+         Last Run: Mon Nov  5 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-8</td>
                         <td>-11</td>
                         <td>3</td>
-                        <td>68</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
@@ -258,10 +258,10 @@
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-9</td>
-                        <td>-13</td>
+                        <td>-8</td>
+                        <td>-11</td>
                         <td>3</td>
-                        <td>67</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
@@ -273,9 +273,9 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>69</td>
+                        <td>67</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>WSW</td>
                         <td>31</td>
                      </tr>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-11",
-                 "-13",
+                 "-11",
                  "-13"
                ]
              },
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-8",
-                 "-9",
+                 "-8",
                  "-9"
                ]
              }
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
-                 "67",
-                 "69"
+                 "64",
+                 "66",
+                 "67"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 00:05:02 2018</p>
+         Last Run: Mon Nov  5 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 00:05:02 2018</p>
+         Last Run: Mon Nov  5 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 11, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -678,11 +678,11 @@
                         <td>Overcast</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>9</td>
-                        <td>48</td>
+                        <td>10</td>
+                        <td>47</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>WNW</td>
+                        <td>NNW</td>
                         <td>81</td>
                      </tr>
                      <tr>
@@ -690,11 +690,11 @@
                         <td>Overcast</td>
                         <td>3</td>
                         <td>1</td>
-                        <td>9</td>
-                        <td>49</td>
+                        <td>11</td>
+                        <td>47</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>NW</td>
+                        <td>N</td>
                         <td>83</td>
                      </tr>
                      <tr>
@@ -702,11 +702,11 @@
                         <td>Overcast</td>
                         <td>3</td>
                         <td>1</td>
-                        <td>10</td>
-                        <td>47</td>
+                        <td>12</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NW</td>
+                        <td>NNW</td>
                         <td>85</td>
                      </tr>
                   </tbody>
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "9",
-                 "9",
-                 "10"
+                 "10",
+                 "11",
+                 "12"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "48",
-                 "49",
-                 "47"
+                 "47",
+                 "47",
+                 "46"
                ]
              },
              {
